test(tfi-compare): push branch coverage to 75.1% + add perf & API compat tests
- Add 242 compare branch tests (FieldChange, CompareResult, StrategyResolver,
  CollectionCompareStrategy, EnhancedDateCompareStrategy, DefaultComparisonProvider)
- Add 314 entity/filter/summary/metrics/spi/cache branch tests
- Add 41 final-push tests for PrecisionMetrics, TfiFeatureFlags, DeepSnapshotStrategy
- Add 14 performance tests gated by -Dtfi.perf.enabled=true (CompareService,
  PathDeduplicator, ObjectSnapshotDeep, CompareResult query API)
- Add 22 API surface compatibility tests (core classes, SPI, annotations, models)
- Fix PathBranchCoverageTests NPE: List.of(null) → ArrayList with null

Coverage: 87.8% instruction, 75.1% branch, 89.4% method (3591 tests, 0 failures)
Co-authored-by: Cursor <cursoragent@cursor.com>